--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -1,3 +1,5 @@
+@import "../../style/variables.scss";
+
 .comics {
     &__list {
         margin-top: 45px;
@@ -31,6 +33,8 @@
         }
         &:hover {
             transform: translateY(-5px);
+            box-shadow: 0 5px 20px $main-color;
+            transform: translateY(-8px);
         }
     }
 }
