--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -10,6 +10,7 @@
         display: grid;
         grid-template-columns: 180px auto;
         column-gap: 30px;
+        background: $my-gradient;
     }
     &__img {
         width: 180px;
