--- a/src/components/appHeader/appHeader.scss
+++ b/src/components/appHeader/appHeader.scss
@@ -12,6 +12,7 @@
         span {
             color: $main-color;
         }
+            @include neon-text;
     }
     &__menu {
         ul {
@@ -21,6 +22,9 @@
             font-size: 24px;
             line-height: 32px;
             li {
+                span{
+                    @include neon-text;
+                }
                 margin: 0 8px;
                 a:hover {
                     color: $main-color;
