--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,12 @@
 $main-color: #9F0013;
 $dark: #232222;
 $grey: #5C5C5C;
+$my-gradient:radial-gradient(circle, #4D8AB5, #1E2639);
+
+@mixin neon-text{
+    text-shadow: 1px 1px 5px aliceblue,
+    -1px -1px 5px aliceblue,
+    1px -1px 5px aliceblue,
+    -1px 1px 5px aliceblue,
+    0 0 10px aliceblue;
+}
