--- a/src/components/comicsList/comicsList.scss
+++ b/src/components/comicsList/comicsList.scss
@@ -13,7 +13,7 @@
     &__item {
         transition: 0.3s transform;
         &-img {
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.75);
             width: 225px;
             height: 345px;
         }
@@ -22,19 +22,21 @@
             font-weight: bold;
             font-size: 14px;
             line-height: 18px;
+            color: white;
+
         }
         &-price {
             margin-top: 5px;
             font-weight: bold;
             font-size: 14px;
             line-height: 18px;
-            color: rgba(0, 0, 0, 0.6);
+            color: white;
             text-transform: uppercase;
         }
         &:hover {
             transform: translateY(-5px);
-            box-shadow: 0 5px 20px $main-color;
-            transform: translateY(-8px);
+            box-shadow: 0 15px 50px $main-color;
+            transform: translateY(-20px);
         }
     }
 }
